--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "reset": "git clean -dfx && git reset --hard && npm i",
     "clean": "trash build test",
     "prepare-release": "run-s reset test cov:check doc:html version doc:publish",
-    "postinstall": "npm run build"
+    "postinstall": "npm run build",
     "prepare": "npm run build",
     "prepublish": "npm run build",
     "prebuild": "npm run build",
