--- a/package.json
+++ b/package.json
@@ -29,11 +29,7 @@
     "reset": "git clean -dfx && git reset --hard && npm i",
     "clean": "trash build test",
     "prepare-release": "run-s reset test cov:check doc:html version doc:publish",
-    "postinstall": "npm run build",
-    "prepare": "npm run build",
-    "prepublish": "npm run build",
-    "prebuild": "npm run build",
-    "preinstall": "npm run build"
+    "postinstall": "npm run build"
   },
   "scripts-info": {
     "info": "Display information about the package scripts",
