--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
   "dependencies": {
     "consola": "^2.10.1",
     "node-fetch": "^2.6.0",
+    "sort-array": "^4.1.3",
     "uuid": "^3.3.2",
     "ws": "^7.1.2"
   },
